# SOEN-341-Project

./: .gitignore  .mailmap  .pylintrc  API_DOCUMENTATION.md  CALENDAR_INTEGRATION.md  JWT_AUTHENTICATION.md  README.md  db.backup.sqlite3  env.example  generate_secret_key.py  manage.py  pyproject.toml  requirements.txt  sitecustomize.py
.github/ISSUE_TEMPLATE/: user-story-template.md
.github/workflows/: ci.yml
campus/: __init__.py  celery.py  settings.py  urls.py  wsgi.py
campusevents/: admin.py  apps.py  calendar_utils.py  email_tokens.py  emails.py  models.py  permissions.py  serializers.py  signals_DISABLED.py  tasks.py  tests.py  urls.py  views.py
campusevents/api/: serializers.py
campusevents/emails/: emails.py  tokens.py
campusevents/migrations/: 0001_initial.py  0002_ticket.py  0003_event_admin_comment.py  0004_event_created_at_event_updated_at.py  0005_alter_event_admin_comment.py  0006_emaillog.py
campusevents/templates/: admin_dashboard.html  admin_events_dashboard.html  admin_users_dashboard.html  base.html  calendar.html  create_event.html  event_confirmation.html  event_list.html  home.html  login.html  my_events.html  organizer_my_events.html  register.html
campusevents/views/: README.md  __init__.py  admin_event_views.py  admin_user_views.py  auth_views.py  calendar_views.py  dashboard_views.py  email_views.py  event_views.py  export_views.py  organization_views.py  organizer_views.py  (+3 more)
src/: add.py
tests/: conftest.py  test_add.py  test_admin_dashboard_stats.py  test_admin_organizers_users.py  test_event_attendees_csv.py  test_views.py
(+4 files in other folders)
